--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                
                </div>
                    <div class="col-12">
-                  <button class="btn btn-success btn-sm btn-custom" id="coursesButton">Explore Courses</button>
-                  <button class="btn btn-outline-success btn-sm btn-custom" id="teachersButton">Meet  Teachers</button>
+                  <button class="btn btn-success btn-sm btn-custom" id="coursesButton"> Courses</button>
+                  <button class="btn btn-outline-success btn-sm btn-custom" id="teachersButton">Meet Teachers</button>
                   </div> <!--  -->  
             </div> <!-- row -->
             </div> <!-- container -->
@@ -167,7 +167,7 @@
 
              </div>
             <div class="col-12">
-            <button class="btn btn-success btn-sm btn-custom" id="coursesButton">Explore Courses</button>
+            <button class="btn btn-success btn-sm btn-custom" id="coursesButton"> Courses</button>
             <button class="btn btn-outline-success btn-sm btn-custom" id="teachersButton">Meet Teachers</button>
                 
              </div>
@@ -260,7 +260,7 @@
         <h5 class="card-text">Research & Development</h5>
         <span><img src="images/course-1.jpg" style="border-radius: 50%;margin-top: 10px;" alt=""></span><span style="margin-left: 20px;margin-top: 30px;font-family:'Kdam Thmor Pro', sans-serif ;">Ziad Elassad</span><br>
 
-        <button class="btn btn-success btn-sm btn-custom" id="coursesButton">Explore Courses</button>
+        <button class="btn btn-success btn-sm btn-custom" id="coursesButton"> Courses</button>
         <hr>
         <svg style="color: #80CD36;margin-left: 10px;" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
          <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
@@ -277,7 +277,7 @@
       <label title="text" for="star5"></label>
       <input value="4" name="rate" id="star4" type="radio">
       <label title="text" for="star4"></label>
-      <input value="3" name="rate" id="star3" type="radio" checked="">
+      <input value="3" name="rate" id="star3" type="radio" checked=""
       <label title="text" for="star3"></label>
       <input value="2" name="rate" id="star2" type="radio">
       <label title="text" for="star2"></label>
